<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools">

<data>

</data>

<android.support.constraint.ConstraintLayout
    android:background="@mipmap/bg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".module.login.LoginActivity">


    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@mipmap/bg"
        tools:context=".module.register.RegisterActivity">


        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            app:srcCompat="@mipmap/back" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="42dp"
            android:layout_marginTop="66dp"
            android:textColor="@color/White"
            android:textSize="40sp"
            android:text="@string/register" />


        <LinearLayout
            android:id="@+id/ll_nicun"
            android:layout_marginTop="200dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_below="@+id/textview"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:background="@drawable/register_bt_bg"
            android:layout_height="50dp">

            <TextView
                android:text="@string/username"
                android:textColor="@color/White"
                android:textSize="14sp"
                android:drawablePadding="8dp"
                android:drawableLeft="@mipmap/username"
                android:layout_marginLeft="20dp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/et_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="24dp"
                android:layout_weight="1"
                android:hint="昵称" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/ll_username"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_below="@+id/ll_nicun"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:background="@drawable/register_bt_bg"
            android:layout_height="50dp">

            <TextView
                android:text="@string/username"
                android:textColor="@color/White"
                android:textSize="14sp"
                android:drawablePadding="8dp"
                android:drawableLeft="@mipmap/username"
                android:layout_marginLeft="20dp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/et_phone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="24dp"
                android:layout_weight="1"
                android:inputType="phone"
                android:hint="@string/phonenumber" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_code"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_below="@+id/ll_username"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:background="@drawable/register_bt_bg"
            android:layout_height="50dp">

            <TextView
                android:text="@string/code"
                android:textColor="@color/White"
                android:textSize="14sp"
                android:drawablePadding="8dp"
                android:drawableLeft="@mipmap/code"
                android:layout_marginLeft="20dp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/et_verifcode"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="24dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:layout_weight="4"/>

            <com.example.doldrum.tortoiseandrabbit.widget.CountDownTextView
                android:id="@+id/send_code"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="center"
                android:textColor="@color/colorPrimary"
                android:textSize="14sp"
                android:text="@string/send_code"
                tools:text="@string/send_code" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/ll_password"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_below="@+id/ll_code"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:background="@drawable/register_bt_bg"
            android:layout_height="50dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:drawableLeft="@mipmap/password"
                android:drawablePadding="8dp"
                android:text="@string/password"
                android:textColor="@color/White"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/et_password"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="24dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:layout_weight="1"/>
        </LinearLayout>

        <Button
            android:id="@+id/register"
            android:layout_below="@+id/ll_password"
            android:layout_marginTop="32dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginRight="24dp"
            android:layout_marginLeft="24dp"
            android:background="@drawable/login_bt_weixin"
            android:textColor="@color/White"
            android:textSize="18sp"
            android:text="@string/register" />

    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
</layout>